--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <a href="/">Bulletin Board</a>
+
+    <hr>
+
+    <div><%= notice %></div>
+
+    <div><%= alert %></div>
+
+    <hr>
+
     <%= yield %>
   </body>
 </html>
