--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -8,23 +8,28 @@
 
 <hr>
 
+<ul>
+  <% @list_of_boards.each do |a_board| %>
+    <li>
+      <a href="/boards/<%= a_board.id %>"><%= a_board.name %></a>
+    </li>
+  <% end %>
+</ul>
+
 <div>
   <div>
     <h2>
-      Add a new board
+      Create board
     </h2>
 
     <form action="/insert_board" method="post">
       <div>
-        <label for="name_box">
-          Name
-        </label>
-
+        <label for="name_box">Name</label>
         <input type="text" id="name_box" name="query_name">
       </div>
 
       <button>
-        Create board
+        Add board
       </button>
     </form>
   </div>
@@ -56,28 +61,28 @@
       </tr>
 
       <% @list_of_boards.each do |a_board| %>
-      <tr>
-        <td>
-          <%= a_board.id %>
-        </td>
+        <tr>
+          <td>
+            <%= a_board.id %>
+          </td>
 
-        <td>
-          <%= a_board.name %>
-        </td>
+          <td>
+            <%= a_board.name %>
+          </td>
 
-        <td>
-          <%= time_ago_in_words(a_board.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_board.updated_at) %> ago
-        </td>
+          <td>
+            <%= time_ago_in_words(a_board.created_at) %> ago
+          </td>
+          <td>
+            <%= time_ago_in_words(a_board.updated_at) %> ago
+          </td>
 
-        <td>
-          <a href="/boards/<%= a_board.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
+          <td>
+            <a href="/boards/<%= a_board.id %>">
+              Show details
+            </a>
+          </td>
+        </tr>
       <% end %>
     </table>
   </div>
