--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,50 +1,63 @@
 <div>
   <div>
     <h1>
-      Board #<%= @the_board.id %> details
+      <%= @the_board.name %>
     </h1>
 
-    <div>
-      <div>
-        <a href="/boards">
-          Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/delete_board/<%= @the_board.id %>">
-          Delete board
-        </a>
-      </div>
-    </div>
-
-    <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_board.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.updated_at) %> ago
-      </dd>
-    </dl>
+    <hr>
   </div>
 </div>
 
 <hr>
 
+<h2>Add a new post</h2>
+
+<form action="/insert_post" method="post">
+  <div>
+    <label for="title_field">Title</label>
+    <input type="text" name="query_title" id="title_field">
+  </div>
+
+  <div>
+    <label for="body_field">Body</label>
+    <textarea id="body_field" name="query_body" cols="30" row="10"></textarea>
+  </div>
+
+  <div>
+    <label for="expires_on_field">Expires on</label>
+    <input type="date" name="query_expires_on" id="expires_on_field">
+  </div>
+
+  <input type="hidden" name="query_board_id" id="board_id_field" value="<%= @the_board.id %>">
+
+  <button>
+    Add post
+  </button>
+</form>
+
+<h2>Active Posts</h2>
+
+<% matching_posts = Post.where({ :board_id => @the_board.id }).order({ :expires_on => :asc}) %>
+
+<table border="1">
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th>Posted on</th>
+    <th>Expires on</th>
+  </tr>
+
+  <% matching_posts.each do |a_post| %>
+    <tr>
+      <td><%= a_post.title %></td>
+      <td><%= a_post.body %></td>
+      <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
+      <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
+    </tr>
+  <% end %>
+</table>
+
+<hr>
 
 <div>
   <div>
